--- a/Woman/css/style.css
+++ b/Woman/css/style.css
@@ -1,15 +1,16 @@
 @charset "utf-8";
 /* CSS Document */
 body{background-color: #E8E8E8;}
-header{background-color: #38474F;padding: 0 0.6rem;box-shadow: 0 0 5px #000;}
-header .header_top{height: 2.35rem;line-height: 2.35rem;font-size: 0.65rem;}
-header .header_top .gwc{position: relative;font-size: 1rem;margin-right: 0.5rem}
-.header_top i{width: 0.7rem;height: 0.45rem;border-radius: 9px;background-color: #fff;text-align: center;line-height: 0.45rem;position: absolute;right: -0.5rem; top:0.5rem;color: black;font-style: normal;font-size: 0.5rem;}
+header{background-color: #38474F;box-shadow: 0 0 5px #000;position: fixed;width: 100%;}
+header .header_top{height: 2.35rem;line-height: 2.35rem;font-size: 0.65rem;padding: 0 0.6rem;}
+header .header_top .gwc{position: relative;font-size: 1rem;}
+header .header_top .gwc i{font-style: normal;position: absolute;right: -.2rem;top:20%;font-size: 0.5rem;background-color: #fff;width: .7rem;height: .5rem;border-radius: 10px;line-height: .5rem;text-align: center;}
 header .header_top h4{padding-left: 1.15rem;color: #fff;}
 header .header_buttom{height: 1.575rem;padding-bottom: 0.375rem;font-size: 0.55rem;display: flex;justify-content: space-around;}
 header .header_buttom div:hover{background-color: #F6846A;}
 header .header_buttom div{background-color:#2D3A40;width: 7.175rem;height: 1.575rem;line-height:1.575rem;border-radius: 3px;font-size: 0.5rem;color: #fff;}
-.banner{margin: 0.625rem;border-radius: 7px;background-color: #fff;box-shadow: 0 0 5px #c0c0c0;overflow: hidden;}
+.stead{height: 5rem;width: 100%;}
+.banner{margin: 0 .625rem  .635rem 0.625rem;border-radius: 7px;background-color: #fff;box-shadow: 0 0 5px #c0c0c0;overflow: hidden;}
 .banner .img{vertical-align: middle;text-align: center;}
 .banner img{width:14.8rem; height:11.8rem;}
 .banner p{font-size: 0.65rem;color: #000;line-height: 3rem;padding: 0 1.1rem 0 0.65rem;}
